components/envoy-gateway/configs/production/perimeter-gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: perimeter-cluster-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: perimeter-envoy-proxy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.ilysium.io"
    - name: minecraft
      protocol: TCP
      port: 25565
      allowedRoutes:
        namespaces:
          from: All
    - name: minecraft-bedrock
      protocol: UDP
      port: 19132
      allowedRoutes:
        namespaces:
          from: All
